# KIV_PPR

./: .gitignore  CMakeLists.txt  README.md  dataLoader.cpp  dataLoader.h  data_loader.cpp  data_loader.h  main.cpp  mergeSort.cpp  mergeSort.h  merge_sort.cpp  merge_sort.h  my_utils.h  openCL.cpp  openCL_utils.h  statistics.cpp  statistics.h
lib/drawing/: Drawing.h  SVGRenderer.cpp
src/: main.cpp  openCL.cpp  openCL.h  openCL_utils.cpp  openCL_utils.h
src/data_loader/: data_loader.cpp  data_loader.h
src/data_processing/: device_type.h
src/data_processing/CPU/: merge_sort.cpp  merge_sort.h  statistics.cpp  statistics.h
src/data_processing/GPU/: GPU_calc.cpp  GPU_calc.h  openCL.cpp
src/statistics/cpu/: statistics.h
src/statistics/gpu/: GPU_computations.cpp  GPU_computations.h  kernels.cl
src/svg_ploter/: svg_ploter.cpp  svg_ploter.h
src/utils/: execution_policy.h  my_utils.cpp  my_utils.h  my_utils2.h
